# dasarPengendaliIRIS

./: CMakeLists.txt  motcon.cpp  nano.save
Motcon/: motcon
ROBOT_KOTAK/src/communication/: CMakeLists.txt  package.xml
ROBOT_KOTAK/src/communication/launch/: launch.launch
ROBOT_KOTAK/src/communication/src/: comTest.cpp  multicast.cpp  tesUnicast.cpp  tes_multicast.cpp  unicast.cpp
ROBOT_KOTAK/src/master/: CMakeLists.txt  package.xml
ROBOT_KOTAK/src/master/include/master/: master.hpp
ROBOT_KOTAK/src/master/launch/: launch.launch
ROBOT_KOTAK/src/master/src/: master.cpp
Web/: index.html  index.js
controller2/src/joystick/: CMakeLists.txt  package.xml
controller2/src/joystick/src/: controller  controller.cpp  terima.cpp
src/: main.cpp  moda1.cpp  moda2.cpp  moda3.cpp  moda4.cpp  moda5.cpp
src/joystick/launch/: joy.launch
src/joystick/src/: controller.cpp  terima.cpp
